set_target_properties(Krangled PROPERTIES LINKER_LANGUAGE CXX)

set (GAME_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR})
set (GAME_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR})
set (GAME_RESOURCE_SOURCE_FOLDER "${CMAKE_CURRENT_LIST_DIR}/Resources")
set (GAME_RESOURCE_TARGET_FOLDER "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Resources")

file(GLOB_RECURSE GAME_SOURCE_FILES CONFIGURE_DEPENDS
    "${GAME_SOURCE_DIR}/*.cpp"
    "${GAME_INCLUDE_DIR}/*.h"
)


set(GAME_SOURCES ${GAME_SOURCE_FILES})

set (KRANGLED_INCLUDE_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/../Krangled")

include_directories(${GAME_INCLUDE_DIR} ${KRANGLED_INCLUDE_DIRECTORY})

add_executable(Game ${GAME_SOURCES})

target_include_directories(Game PRIVATE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries (Game PRIVATE Krangled)
find_library(Krangled  PRIVATE "${CMAKE_BINARY_DIR}/bin}")

INSTALL(
	CODE "execute_process ( \
	COMMAND ${CMAKE_COMMAND} \
	-E create_symlink ${GAME_RESOURCE_SOURCE_FOLDER} \
	${GAME_RESOURCE_TARGET_FOLDER}
	)"
)

ADD_CUSTOM_TARGET(RESOURCES ALL
				COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
				COMMAND ${CMAKE_COMMAND} -E create_symlink ${GAME_RESOURCE_SOURCE_FOLDER} ${GAME_RESOURCE_TARGET_FOLDER})

add_dependencies(Game RESOURCES)

set_property(TARGET Game PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})



	
